--- a/schedule.html
+++ b/schedule.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 <div class="banner">
-  <img src="images/banner.jpg" alt="Causal and Object-Centric Representations for Robotics" class="banner-img">
+  <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
   <div class="banner-text">
-    <h1>Causal and Object-Centric Representations for Robotics</h1>
-    <p>June 17, CVPR 2024 Workshop (Arch 210 & Posters #225 - 239)</p>
+    <h1>Learning to Simulate Robot Worlds</h1>
+    <p>CoRL 2025 Workshop (under review)</p>
   </div>
 </div>
 <div class="contributed talks">
   <p>
-  </br><span class="dot-invited-talk"></span> Invited/Keynote Talk,  <span class="dot-contributed-talk"></span> Contributed Talk,  <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
+  </br><span class="dot-invited-talk"></span> Invited Talk,  <span class="dot-contributed-talk"></span> Contributed Talk,  <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
   </p>
   <table class="table table-striped table-condensed" id="schedule">
     <thead>
@@ -22,79 +22,64 @@ layout: default
     </thead>
     <tbody>
       <tr>
-        <td><span class="dot-other-session"></span> 9:00 - 9:10</td>
+        <td><span class="dot-other-session"></span> 09:30 - 09:40</td>
         <td>Organizers</td>
         <td>Introduction</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 9:10 - 10:00</td>
-        <td>Thomas Kipf</td>
-        <td>Object-centric Controllable Scene Representations</td>
+        <td><span class="dot-invited-talk"></span> 09:40 - 10:05</td>
+        <td>TBD</td>
+        <td>Invited Talk 1 (20 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 10:00 - 10:35</td>
-        <td>Animesh Garg</td>
-        <td>Object-Centric Priors for Embodied Interaction</td>
+        <td><span class="dot-invited-talk"></span> 10:05 - 10:30</td>
+        <td>TBD</td>
+        <td>Invited Talk 2 (20 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-contributed-talk"></span> 10:35 - 10:50</td>
-        <td>Ayush Jain</td>
-        <td>Energy-based Models are Zero-Shot Planners for Compositional Scene Rearrangement</td>
+        <td><span class="dot-other-session"></span> 10:30 - 11:00</td>
+        <td></td>
+        <td>Coffee break</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 10:50 - 11:10</td>
-        <td> </td>
-        <td>Break</td>
+        <td><span class="dot-invited-talk"></span> 11:00 - 11:25</td>
+        <td>TBD</td>
+        <td>Invited Talk 3 (20 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 11:10 - 11:45</td>
-        <td>Alan Yuille</td>
-        <td>The World is 3D and Compositional</td>
+        <td><span class="dot-contributed-talk"></span> 11:30 - 12:30</td>
+        <td>TBD</td>
+        <td>Selected abstracts (4 × 15 min)</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 11:45 - 12:20</td>
-        <td>Sara Magliacane</td>
-        <td>Causal Representation Learning in Temporal Settings</td>
-      </tr>
-      <tr>
-        <td><span class="dot-contributed-talk"></span>12:20 - 12:35</td>
-        <td>Jack Collins</td>
-        <td>DreamUp3D: Object-Centric Generative Models for 3D Dreaming</td>
-      </tr>
-      <tr>
-        <td><span class="dot-other-session"></span> 12:35 - 13:35</td>
+        <td><span class="dot-other-session"></span> 12:30 - 13:30</td>
         <td></td>
         <td>Lunch</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 13:35 - 14:10</td>
-        <td>Sungjin Ahn</td>
-        <td>In Search of Neural Language of Thought Models</td>
+        <td><span class="dot-invited-talk"></span> 13:30 - 13:55</td>
+        <td>TBD</td>
+        <td>Invited Talk 4 (20 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-contributed-talk"></span> 14:10 - 14:25</td>
-        <td>Jisu Han</td>
-        <td>Adaptive Visual Abstraction via Object Token Mixture</td>
+        <td><span class="dot-invited-talk"></span> 14:00 - 14:30</td>
+        <td>TBD</td>
+        <td>Invited Talk 5 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 14:25 - 14:45</td>
+        <td><span class="dot-other-session"></span> 14:30 - 15:00</td>
         <td></td>
         <td>Break</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 14:45 - 15:20</td>
-        <td>Rares Ambrus</td>
-        <td>Object-Centric Representations for Manipulation</td>
+        <td><span class="dot-other-session"></span> 15:00 - 15:30</td>
+        <td>TBD</td>
+        <td>"Real-to-Sim" Practical tutorial or Demo</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 15:20 - 15:55</td>
-        <td>João Henriques</td>
-        <td>Object-Centric Robotics: Dexterous Manipulation and Causal Guarantees</td>
-      </tr>
-      <tr>
-        <td><span class="dot-poster-session"></span> 16:00 - 17:00</td>
+        <td><span class="dot-poster-session"></span> 15:30 - 16:30</td>
         <td></td>
-        <td>Poster Session</td>
+        <td>Posters</td>
       </tr>
     </tbody>
   </table>
