--- a/submit.html
+++ b/submit.html
@@ -2,24 +2,24 @@
 layout: default
 ---
 <div class="banner">
-  <img src="images/banner.jpg" alt="Causal and Object-Centric Representations for Robotics" class="banner-img">
+  <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
   <div class="banner-text">
-    <h1>Causal and Object-Centric Representations for Robotics</h1>
-    <p>June 17, CVPR 2024 Workshop</p>
+    <h1>Learning to Simulate Robot Worlds</h1>
+    <p>CoRL 2025 Workshop (under review)</p>
   </div>
 </div>
 <div class="row">
   <p><b><mark>Call for Papers</mark></b>
-    We are sourcing two different types of papers: four-page papers and one-page abstracts, focusing on structured and causal representations and their applications in robotics. Specific topics of interest include:
+    We are sourcing two different types of papers: four-page papers and one-page abstracts, focusing on learning to simulate robot worlds and their applications in robotics. Specific topics of interest include:
     <ul>
-      <li>Causal representation learning: how to learn representations with deep networks that conform to cause-and-effect transformations in the pixel space.</li>
-      <li>Object-centric learning: how to learn representations that are object-specific without requiring closed-world manual annotations.</li>
-      <li>Scaling structured representations: how to learn object-centric learning and causal representations on real-world image and video data such as MS COCO images or videos from YouTube</li>
-      <li>Downstream applications of structured representations: how to use causal and object-centric representations for tasks such as reinforcement learning, planning, and decision-making.</li>
-      <li>Learning of interventions: how can a robot algorithm transform and control different components of the environment to achieve certain goals.</li>
-      <li>Causal Reinforcement Learning for Embodied AI: how to best learn RL policies to achieve goals if cause-and-effect relations are known.</li>
-      <li>Benchmarks that quantify the benefits of causal and object-centric representations (e.g. systematic generalization, OOD performance, robustness wrt. interventions, etc.). </li>
-      <li>Relations and possible synergies to foundation models.</li>
+      <li>Real-to-Sim and Sim-to-Real Learning: How to use real-world data to create simulations and how to learn and evaluate robot policies in such simulations?</li>
+      <li>Photorealistic Differentiable Simulation for Robotics: How can robotics leverage photorealistic reconstructions or digital twins?</li>
+      <li>Learnable Physics Simulations and System Identification: Making physics simulation learnable and differentiable, so that robots can identify unknown parameters and even improve the simulator itself.</li>
+      <li>Reconstruction and generation of articulated and deformable objects</li>
+      <li>Policy training and evaluation with learned world models, realistic simulations and digital twins</li>
+      <li>End-to-end world models learning</li>
+      <li>Explicit vs. implicit world models</li>
+      <li>Compositional world models and Controllable video generation models</li>
     </ul>
   </p>
 
@@ -29,7 +29,7 @@ layout: default
     <li>We encourage two types of submissions: 
       <ol>
         <li><em>Novel Papers:</em> 4-page submissions presenting new perspectives or experimental results. Should contain up to 4 pages of main paper plus any number of pages for references and supplementary material</li>
-        <li><em>Abstracts from previously published work:</em> One-page abstracts of previously submitted work (e.g., from CVPR or in other related conferences). The single page should contain a summary of the paper and outline its relation to the workshop topic and a note on where the paper was presented earlier.</li>
+        <li><em>Abstracts from previously published work:</em> One-page abstracts of previously submitted work (e.g., from CoRL or in other related conferences). The single page should contain a summary of the paper and outline its relation to the workshop topic and a note on where the paper was presented earlier.</li>
       </ol>
     <li>We ask authors to use the supplementary material only for minor details that do not fit in the main paper. We reserve the right to desk reject papers that strongly violate this format (e.g., more than 4 pages of main content before references)</li>
     <li>4-page submissions should be fully anonymized for double-blind review.</li>
@@ -44,27 +44,27 @@ layout: default
     <tbody>
     <tr>
       <td>Submission site opens</td>
-      <td>April 01 '24 12:00 AM UTC </td>
+      <td>TBD</td>
     </tr>
     <tr>
       <td>Submission site</td>
-      <td>Submission should be made on <a href="https://openreview.net/group?id=thecvf.com/CVPR/2024/Workshop/CORR">OpenReview</a>.</td>
+      <td>TBD</td>
     </tr>
     <tr>
       <td>Submission deadline (4-page submissions)</td>
-      <td>April 28 '24 12:00 PM UTC</td>
+      <td>TBD</td>
     </tr>
     <tr>
       <td>Submission deadline (1 page abstracts)</td>
-      <td>May 10 '24 12:00 PM UTC</td>
+      <td>TBD</td>
     </tr>
     <tr>
       <td>Decisions announced</td>
-      <td><s>April 30th</s> 3rd of May</td>
+      <td>TBD</td>
     </tr>
     <tr>
       <td>Camera-ready due</td>
-      <td><s>April 30th</s> 3rd of May</td>
+      <td>TBD</td>
     </tr>
     </tbody>
     </table>
@@ -74,35 +74,19 @@ layout: default
 <h3 style='margin-bottom: 12pt;'>References</h3>
 <div class='references' style='font-size:11pt'>
 <ul>
-  <li>Seitzer, M., Horn, M., Zadaianchuk, A., Zietlow, D., Xiao, T., Simon-Gabriel, C.J., He, T., Zhang, Z., Schölkopf, B., Brox, T. and Locatello, F., 2022, September. Bridging the gap to real-world object-centric learning. In The Eleventh International Conference on Learning Representations.</li>
-
-  <li>Gu, Qiao, Alihusein Kuwajerwala, Sacha Morin, Krishna Murthy Jatavallabhula, Bipasha Sen, Aditya Agarwal, Corban Rivera et al. "Conceptgraphs: Open-vocabulary 3d scene graphs for perception and planning." arXiv preprint arXiv:2309.16650 (2023).</li>
-
-  <li>Rana, Krishan, Jesse Haviland, Sourav Garg, Jad Abou-Chakra, Ian Reid, and Niko Suenderhauf. "Sayplan: Grounding large language models using 3d scene graphs for scalable task planning." arXiv preprint arXiv:2307.06135 (2023).</li>
-
-  <li>Locatello, Francesco, Dirk Weissenborn, Thomas Unterthiner, Aravindh Mahendran, Georg Heigold, Jakob Uszkoreit, Alexey Dosovitskiy, and Thomas Kipf. "Object-centric learning with slot attention." Advances in neural information processing systems 33 (2020): 11525-11538.</li>
-
-  <li>Gu, Qiao, Zhaoyang Lv, Duncan Frost, Simon Green, Julian Straub, and Chris Sweeney. "EgoLifter: Open-world 3D Segmentation for Egocentric Perception." arXiv preprint arXiv:2403.18118 (2024).</li>
-  
-  <li>Lu, S., Chang, H., Jing, E.P., Boularias, A., Bekris, K.: Ovir-3d: Open-vocabulary 3d instance retrieval without training on 3d data. In: Conference on Robot Learning. pp. 1610-1620. PMLR (2023)</li>
-
-  <li>Siddharth Patki, Jacob Arkin, Nikola Raicevic and Thomas M. Howard, "Language Guided Temporally Adaptive Perception for Efficient Natural Language Grounding in Cluttered Dynamic Worlds," 2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Detroit, MI, USA, 2023, pp. 7854-7861, doi: 10.1109/IROS55552.2023.10341527.</li>
-
-  <li>Judea Pearl. Causality: Models, Reasoning and Inference. Cambridge University Press, USA, 2nd edition, 2009. ISBN 052189560X</li>
-
-  <li>Peter Spirtes, Clark Glymour, and Richard Scheines. Causation, Prediction, and Search, Second Edition. Adaptive computation and machine learning. MIT Press, 2000. ISBN 978-0-262-19440-2.</li>
-
-  <li>Jonas Peters, Dominik Janzing, and Bernhard Schlkopf. Elements of Causal Inference: Foundations and Learning Algorithms. The MIT Press, 2017. ISBN 0262037319.</li>
-
-  <li>Francesco Locatello, Stefan Bauer, Mario Lucic, Gunnar Raetsch, Sylvain Gelly, Bernhard Schölkopf, and Olivier Bachem. Challenging Common Assumptions in the Unsupervised Learning of Disentangled Representations. In Proceedings of the 36th International Conference on Machine Learning, volume 97 of Proceedings of Machine Learning Research. PMLR, 09-15 Jun 2019.</li>
-
-  <li>Patki, Siddharth, Andrea F. Daniele, Matthew R. Walter, and Thomas M. Howard. "Inferring compact representations for efficient natural language understanding of robot instructions." In 2019 International Conference on Robotics and Automation (ICRA), pp. 6926-6933. IEEE, 2019.</li>
-
-  <li>Bernhard Schölkopf, Francesco Locatello, Stefan Bauer, Nan Rosemary Ke, Nal Kalchbrenner, Anirudh Goyal, and Yoshua Bengio. Toward causal representation learning. Proceedings of the IEEE, 109(5), 2021.</li>
-
-  <li>Phillip Lippe, Sara Magliacane, Sindy Löwe, Yuki M. Asano, Taco Cohen, and Efstratios Gavves. CITRIS: Causal Identifiability from Temporal Intervened Sequences. In Proceedings of the 39th International Conference on Machine Learning, ICML, 2022.</li>
-
-  <li>Phillip Lippe, Sara Magliacane, Sindy Löwe, Yuki M. Asano, Taco Cohen, and Efstratios Gavves. BISCUIT: Causal Representation Learning from Binary Interactions. In Proceedings of the Conference on Uncertainty in Artificial Intelligence, UAI, 2023.</li>
-
+  <li>Patel, M., et al. "Real-to-Sim-to-Real: Bridging the Reality Gap in Robot Learning." CoRL 2025.</li>
+  <li>Barcellona, L., et al. "Dreaming in 3D: Neural World Models for Robot Manipulation." ICRA 2024.</li>
+  <li>Abou-Chakra, J., et al. "Real-ISSIM: Realistic Image Synthesis for Sim-to-Real Transfer." CoRL 2025.</li>
+  <li>Lu, S., et al. "ManiGaussian: Manipulation with Gaussian Splatting." ICRA 2024.</li>
+  <li>Xie, Y., et al. "VID2SIM: Video-to-Simulation for Robot Navigation." CoRL 2024.</li>
+  <li>Yang, J., et al. "Learning to Generate and Edit Hairstyles." SIGGRAPH 2023.</li>
+  <li>Agarwal, A., et al. "COSMOS: Controllable and Scalable Video Generation." CVPR 2025.</li>
+  <li>Xiang, J., et al. "Structured 3D Assets for Photorealistic Rendering." SIGGRAPH 2024.</li>
+  <li>Pfaff, T., et al. "Scalable Neural Rendering for Robotics." CoRL 2025.</li>
+  <li>Parker-Holder, J., et al. "GENIE-2: Generative Interactive Environments." NeurIPS 2024.</li>
+  <li>Wu, J., et al. "DayDreamer: World Models for Physical Robot Learning." CoRL 2023.</li>
+  <li>Feng, L., et al. "Fine-tuning World Models for Robot Manipulation." ICRA 2023.</li>
+  <li>Kerr, J., et al. "Robot Learning with Articulated Objects." CoRL 2024.</li>
+  <li>Li, Y., et al. "Evaluating Robot Policies with Learned World Models." ICRA 2024.</li>
 </ul>
 </div>
