Refactor speaker layout in index.html by restructuring the HTML for improved organization and responsiveness; maintain existing speaker information and links.

--- a/index.html
+++ b/index.html
@@ -41,58 +41,59 @@ layout: coverpage
 <div id="speakers" class="row">
   <h2>Potential Speakers (TBD)</h2>
   <div class="break"></div>
-        <div class="container">
-            <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
-              <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
-                  src="images/speakers/animesh-garg.jpg" alt=""></center>
-              <a href="https://animesh.garg.tech/">
-                <h4 class="section-heading">
-                  <center>Animesh Garg</center>
-                </h4>
-              </a>
-              <h5 class="section-heading">
-                <center><i>University of Toronto, Nvidia</i></center>
-              </h5>
-            </div>
-            <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
-              <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
-                  src="images/speakers/sungjin-ahn.jpg" alt=""></center>
-              <a href="https://mlml.kaist.ac.kr/sungjinahn">
-                <h4 class="section-heading">
-                  <center>Sungjin Ahn</center>
-                </h4>
-              </a>
-              <h5 class="section-heading">
-                <center><i>KAIST, South Korea</i></center>
-              </h5>
-            </div>
-            <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
-              <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
-                  src="images/speakers/katerina-fragkiadaki.png" alt=""></center>
-              <a href="https://www.cs.cmu.edu/~katef/">
-                <h4 class="section-heading">
-                  <center>Katerina Fragkiadaki</center>
-                </h4>
-              </a>
-              <h5 class="section-heading">
-                <center><i>Carnegie Mellon University</i></center>
-              </h5>
-            </div>
-            <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
-              <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
-                  src="images/speakers/georg-martius.jpg" alt=""></center>
-              <a href="TODO">
-                <h4 class="section-heading">
-                  <center>Georg Martius</center>
-                </h4>
-              </a>
-              <h5 class="section-heading">
-                <center><i>University of Tuebingen, Germany</i></center>
-              </h5>
-            </div>
-          </div>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/animesh-garg.jpg" alt=""></center>
+        <a href="https://animesh.garg.tech/">
+          <h4 class="section-heading">
+            <center>Animesh Garg</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>University of Toronto, Nvidia</i></center>
+        </h5>
+      </div>
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/sungjin-ahn.jpg" alt=""></center>
+        <a href="https://mlml.kaist.ac.kr/sungjinahn">
+          <h4 class="section-heading">
+            <center>Sungjin Ahn</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>KAIST, South Korea</i></center>
+        </h5>
+      </div>
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/katerina-fragkiadaki.png" alt=""></center>
+        <a href="https://www.cs.cmu.edu/~katef/">
+          <h4 class="section-heading">
+            <center>Katerina Fragkiadaki</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>Carnegie Mellon University</i></center>
+        </h5>
+      </div>
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/georg-martius.jpg" alt=""></center>
+        <a href="TODO">
+          <h4 class="section-heading">
+            <center>Georg Martius</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>University of Tuebingen, Germany</i></center>
+        </h5>
+      </div>
+    </div>
   </div>
+</div>
 
 <div id="organizers" class="row">
 <h2>Organizers</h2>
