Comment out the container div for potential speakers in index.html to temporarily hide the section while maintaining the structure for future use.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: coverpage
 <div id="speakers" class="row">
   <h2>Potential Speakers (TBD)</h2>
   <div class="break"></div>
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
@@ -92,7 +92,7 @@ layout: coverpage
         </h5>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <div id="organizers" class="row">
