Update workshop title and Twitter metadata in coverpage.html; adjust organizer layout in index.html for improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ layout: coverpage
         </div>
 
         <div class="row wow fadeInRightBig" data-animation-delay="200">
-          <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+          <div class="col-sm-2 col-sm-offset-1 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/fabien-despinoy.jpg" alt=""></center>
             <a href="#">
