Add workshop description and topics to index.html, enhancing content on simulation and world models in robotics.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@ layout: coverpage
 </div>
 
 <div class="row">
+  <div class="break"></div>
+  <p>
+    Robotics is entering an era where high-fidelity simulation and data-driven controllable world models are converging to revolutionize learning for manipulation and navigation. Traditionally, physics-based simulators and digital twins have been the go-to approach for training and evaluating robot policies. However, constructing realistic simulations with engines like Unity or Unreal is labor-intensive and often fails to capture the full complexity of the real world.
+  </p>
+  <p>
+    Recent advances in large-scale pretrained models have enabled the generation of videos, 3D assets, and even entire simulators. At the same time, compact world models learned from scratch can capture task-specific dynamics tailored to a particular robot. Together, these approaches show that simulations no longer need to be manually constructed, they can be learned directly from data.
+  </p>
+  <p>
+    This workshop aims to bridge the spectrum from physics-grounded simulation, photorealistic digital twins, AI-controlled simulators, to fully learned neural world models. We will explore how cutting-edge simulation technologies, such as differentiable physics engines and realistic rendering, can integrate with or evolve into learned models of the world.
+  </p>
+  <p>
+    The goal is to bring together researchers from traditionally separate communities: those focused on high-fidelity simulators and those developing learned implicit models. Together, we will discuss how to combine the strengths of both approaches to advance robot learning.
+  </p>
+</div>
+
+<div class="row">
+  <h2>Topics</h2>
+  <div class="break"></div>
+  <ul>
+    <li>Real-to-Sim and Sim-to-Real Learning</li>
+    <li>Photorealistic Differentiable Simulation for Robotics (e.g. NeRFs, 3D Gaussian Splatting)</li>
+    <li>Learnable Physics Simulations and System Identification</li>
+    <li>Reconstruction and generation of articulated and deformable objects</li>
+    <li>Policy training and evaluation with learned world models, realistic simulations and digital twins</li>
+    <li>End-to-end world models learning</li>
+    <li>Explicit vs. implicit world models</li>
+    <li>Compositional world models and Controllable video generation models</li>
+  </ul>
+</div>
+
+<div class="row">
 <p>
   
   <h2>Important Dates and Links</h2>
@@ -221,38 +252,5 @@ layout: coverpage
         </div>
       </div>
 </div>
-
-<div class="row">
-  <h2>Workshop Description</h2>
-  <div class="break"></div>
-  <p>
-    Robotics is entering an era where high-fidelity simulation and data-driven controllable world models are converging to revolutionize learning for manipulation and navigation. Traditionally, physics-based simulators and digital twins have been the go-to approach for training and evaluating robot policies. However, constructing realistic simulations with engines like Unity or Unreal is labor-intensive and often fails to capture the full complexity of the real world.
-  </p>
-  <p>
-    Recent advances in large-scale pretrained models have enabled the generation of videos, 3D assets, and even entire simulators. At the same time, compact world models learned from scratch can capture task-specific dynamics tailored to a particular robot. Together, these approaches show that simulations no longer need to be manually constructed, they can be learned directly from data.
-  </p>
-  <p>
-    This workshop aims to bridge the spectrum from physics-grounded simulation, photorealistic digital twins, AI-controlled simulators, to fully learned neural world models. We will explore how cutting-edge simulation technologies, such as differentiable physics engines and realistic rendering, can integrate with or evolve into learned models of the world.
-  </p>
-  <p>
-    The goal is to bring together researchers from traditionally separate communities: those focused on high-fidelity simulators and those developing learned implicit models. Together, we will discuss how to combine the strengths of both approaches to advance robot learning.
-  </p>
-</div>
-
-<div class="row">
-  <h2>Topics</h2>
-  <div class="break"></div>
-  <ul>
-    <li>Real-to-Sim and Sim-to-Real Learning: How to use real-world data to create simulations and how to learn and evaluate robot policies in such simulations?</li>
-    <li>Photorealistic Differentiable Simulation for Robotics (e.g. NeRFs, 3D Gaussian Splatting): How can robotics leverage photorealistic reconstructions or digital twins?</li>
-    <li>Learnable Physics Simulations and System Identification: Making physics simulation learnable and differentiable</li>
-    <li>Reconstruction and generation of articulated and deformable objects</li>
-    <li>Policy training and evaluation with learned world models, realistic simulations and digital twins</li>
-    <li>End-to-end world models learning</li>
-    <li>Explicit vs. implicit world models</li>
-    <li>Compositional world models and Controllable video generation models</li>
-  </ul>
-</div>
-
 
 </div>
