Update references in submit.html by removing conference year citations for improved clarity and consistency.

--- a/submit.html
+++ b/submit.html
@@ -74,19 +74,19 @@ layout: default
 <h3 style='margin-bottom: 12pt;'>References</h3>
 <div class='references' style='font-size:11pt'>
 <ul>
-  <li>Patel, M., et al. "Real-to-Sim-to-Real: Bridging the Reality Gap in Robot Learning." CoRL 2025.</li>
-  <li>Barcellona, L., et al. "Dreaming in 3D: Neural World Models for Robot Manipulation." ICRA 2024.</li>
-  <li>Abou-Chakra, J., et al. "Real-ISSIM: Realistic Image Synthesis for Sim-to-Real Transfer." CoRL 2025.</li>
-  <li>Lu, S., et al. "ManiGaussian: Manipulation with Gaussian Splatting." ICRA 2024.</li>
-  <li>Xie, Y., et al. "VID2SIM: Video-to-Simulation for Robot Navigation." CoRL 2024.</li>
-  <li>Yang, J., et al. "Learning to Generate and Edit Hairstyles." SIGGRAPH 2023.</li>
-  <li>Agarwal, A., et al. "COSMOS: Controllable and Scalable Video Generation." CVPR 2025.</li>
-  <li>Xiang, J., et al. "Structured 3D Assets for Photorealistic Rendering." SIGGRAPH 2024.</li>
-  <li>Pfaff, T., et al. "Scalable Neural Rendering for Robotics." CoRL 2025.</li>
-  <li>Parker-Holder, J., et al. "GENIE-2: Generative Interactive Environments." NeurIPS 2024.</li>
-  <li>Wu, J., et al. "DayDreamer: World Models for Physical Robot Learning." CoRL 2023.</li>
-  <li>Feng, L., et al. "Fine-tuning World Models for Robot Manipulation." ICRA 2023.</li>
-  <li>Kerr, J., et al. "Robot Learning with Articulated Objects." CoRL 2024.</li>
-  <li>Li, Y., et al. "Evaluating Robot Policies with Learned World Models." ICRA 2024.</li>
+  <li>Patel, M., et al. "Real-to-Sim-to-Real: Bridging the Reality Gap in Robot Learning."</li>
+  <li>Barcellona, L., et al. "Dreaming in 3D: Neural World Models for Robot Manipulation."</li>
+  <li>Abou-Chakra, J., et al. "Real-ISSIM: Realistic Image Synthesis for Sim-to-Real Transfer."</li>
+  <li>Lu, S., et al. "ManiGaussian: Manipulation with Gaussian Splatting."</li>
+  <li>Xie, Y., et al. "VID2SIM: Video-to-Simulation for Robot Navigation."</li>
+  <li>Yang, J., et al. "Learning to Generate and Edit Hairstyles."</li>
+  <li>Agarwal, A., et al. "COSMOS: Controllable and Scalable Video Generation."</li>
+  <li>Xiang, J., et al. "Structured 3D Assets for Photorealistic Rendering."</li>
+  <li>Pfaff, T., et al. "Scalable Neural Rendering for Robotics."</li>
+  <li>Parker-Holder, J., et al. "GENIE-2: Generative Interactive Environments."</li>
+  <li>Wu, J., et al. "DayDreamer: World Models for Physical Robot Learning."</li>
+  <li>Feng, L., et al. "Fine-tuning World Models for Robot Manipulation."</li>
+  <li>Kerr, J., et al. "Robot Learning with Articulated Objects."</li>
+  <li>Li, Y., et al. "Evaluating Robot Policies with Learned World Models."</li>
 </ul>
 </div>
