--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ layout: coverpage
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/christian-gumbsch.png" alt=""></center>
-            <a href="#">
+            <a href="https://cgumbsch.github.io">
               <h4 class="section-heading">
                 <center>Christian Gumbsch</center>
               </h4>
@@ -169,13 +169,39 @@ layout: coverpage
               <center><i>University of Amsterdam</i></center>
             </h5>
           </div>
+
+          <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
+            <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
+                src="images/organizers/alberta-longhini.png" alt=""></center>
+            <a href="https://albilo17.github.io">
+              <h4 class="section-heading">
+                <center>Alberta Longhini</center>
+              </h4>
+            </a>
+            <h5 class="section-heading">
+              <center><i>KTH Royal Institute of Technology </i></center>
+            </h5>
+          </div>
         </div>
 
         <div class="row wow fadeInRightBig" data-animation-delay="200">
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
+                src="images/organizers/katherine-liu.jpeg" alt=""></center>
+            <a href="https://www.thekatherineliu.com">
+              <h4 class="section-heading">
+                <center>Katherine Liu</center>
+              </h4>
+            </a>
+            <h5 class="section-heading">
+              <center><i>Toyota Research Institute</i></center>
+            </h5>
+          </div>
+
+          <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
+            <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/sergey-zakharov.jpg" alt=""></center>
-            <a href="#">
+            <a href="https://zakharos.github.io">
               <h4 class="section-heading">
                 <center>Sergey Zakharov</center>
               </h4>
@@ -229,7 +255,7 @@ layout: coverpage
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/yunzhu-li.jpg" alt=""></center>
-            <a href="#">
+            <a href="https://yunzhuli.github.io">
               <h4 class="section-heading">
                 <center>Yunzhu Li</center>
               </h4>
