--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ layout: coverpage
               </h4>
             </a>
             <h5 class="section-heading">
-              <center><i>KTH Royal Institute of Technology </i></center>
+              <center><i>KTH</i></center>
             </h5>
           </div>
         </div>
