--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@ layout: coverpage
             </h5>
           </div>
 
+        </div>
+
+        <div class="row wow fadeInRightBig" data-animation-delay="200">
+
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/alberta-longhini.png" alt=""></center>
@@ -179,12 +183,10 @@ layout: coverpage
               </h4>
             </a>
             <h5 class="section-heading">
-              <center><i>KTH</i></center>
+              <center><i>KTH Royal Institute of Technology </i></center>
             </h5>
           </div>
-        </div>
 
-        <div class="row wow fadeInRightBig" data-animation-delay="200">
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/katherine-liu.jpeg" alt=""></center>
@@ -210,6 +212,9 @@ layout: coverpage
               <center><i>Toyota Research Institute</i></center>
             </h5>
           </div>
+        </div>
+
+        <div class="row wow fadeInRightBig" data-animation-delay="200">
 
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
@@ -223,7 +228,7 @@ layout: coverpage
               <center><i>Toyota Motor Europe</i></center>
             </h5>
           </div>
-          
+
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/rahaf-aljundi.jpg" alt=""></center>
@@ -236,9 +241,7 @@ layout: coverpage
               <center><i>Toyota Motor Europe</i></center>
             </h5>
           </div>
-        </div>
 
-        <div class="row wow fadeInRightBig" data-animation-delay="200">
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/rares-ambrus.jpg" alt=""></center>
@@ -251,6 +254,10 @@ layout: coverpage
               <center><i>Toyota Research Institute</i></center>
             </h5>
           </div>
+
+        </div>
+
+        <div class="row wow fadeInRightBig" data-animation-delay="200">
           
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
