--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,7 @@ layout: default
 </div>
 <div class="contributed talks">
   <p>
-  </br><span class="dot-invited-talk"></span> Invited Talk,  <span class="dot-contributed-talk"></span> Contributed Talk,  <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
+  </br><span class="dot-invited-talk"></span> Invited Talk,  <span class=".dot-panel-discussion"></span> Panel Discussion, <span class=".dot-lightning-talk"></span> Contributed Talks, <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
   </p>
   <table class="table table-striped table-condensed" id="schedule">
     <thead>
@@ -22,34 +22,39 @@ layout: default
     </thead>
     <tbody>
       <tr>
-        <td><span class="dot-other-session"></span> 09:30 - 09:40</td>
+        <td><span class="dot-other-session"></span> 09:00 - 09:15</td>
         <td>Organizers</td>
         <td>Introduction</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 09:40 - 10:05</td>
+        <td><span class="dot-invited-talk"></span> 09:15 - 09:45</td>
         <td>TBD</td>
-        <td>Invited Talk 1 (20 min talk + 5 min QA)</td>
+        <td>Invited Talk 1 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 10:05 - 10:30</td>
+        <td><span class="dot-invited-talk"></span> 09:45 - 10:15</td>
         <td>TBD</td>
-        <td>Invited Talk 2 (20 min talk + 5 min QA)</td>
+        <td>Invited Talk 2 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 10:30 - 11:00</td>
+        <td><span class="dot-lightning-talk"></span> 10:15 - 10:30</td>
         <td></td>
-        <td>Coffee break</td>
+        <td>Selected Abstracts</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 11:00 - 11:25</td>
-        <td>TBD</td>
-        <td>Invited Talk 3 (20 min talk + 5 min QA)</td>
+        <td><span class="dot-poster-session"></span> 10:30 - 11:00</td>
+        <td></td>
+        <td>Coffee break & Posters</td>
       </tr>
       <tr>
-        <td><span class="dot-contributed-talk"></span> 11:30 - 12:30</td>
+        <td><span class="dot-invited-talk"></span> 11:00 - 11:30</td>
         <td>TBD</td>
-        <td>Selected abstracts (4 × 15 min)</td>
+        <td>Invited Talk 3 (25 min talk + 5 min QA)</td>
+      </tr>
+      <tr>
+        <td><span class="dot-panel-discussion"></span> 11:30 - 12:30</td>
+        <td>TBD</td>
+        <td>Panel Discussion</td>
       </tr>
       <tr>
         <td><span class="dot-other-session"></span> 12:30 - 13:30</td>
@@ -57,9 +62,9 @@ layout: default
         <td>Lunch</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 13:30 - 13:55</td>
+        <td><span class="dot-invited-talk"></span> 13:30 - 14:00</td>
         <td>TBD</td>
-        <td>Invited Talk 4 (20 min talk + 5 min QA)</td>
+        <td>Invited Talk 4 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
         <td><span class="dot-invited-talk"></span> 14:00 - 14:30</td>
@@ -67,17 +72,27 @@ layout: default
         <td>Invited Talk 5 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 14:30 - 15:00</td>
-        <td></td>
-        <td>Break</td>
-      </tr>
-      <tr>
-        <td><span class="dot-other-session"></span> 15:00 - 15:30</td>
+        <td><span class="dot-invited-talk"></span> 14:30 - 15:00</td>
         <td>TBD</td>
-        <td>"Real-to-Sim" Practical tutorial or Demo</td>
+        <td>Invited Talk 6 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-poster-session"></span> 15:30 - 16:30</td>
+        <td><span class="dot-other-session"></span> 15:00 - 15:10</td>
+        <td></td>
+        <td> Paper Awards</td>
+      </tr>
+      <tr>
+        <td><span class="dot-poster-session"></span> 15:10 - 15:40</td>
+        <td></td>
+        <td>Coffee Break & Posters</td>
+      </tr>
+      <tr>
+        <td><span class="dot-panel-discussion"></span> 15:40 - 16:40</td>
+        <td>TBD</td>
+        <td>Panel Discussion</td>
+      </tr>
+      <tr>
+        <td><span class="dot-poster-session"></span> 16:40 - 17:00</td>
         <td></td>
         <td>Posters</td>
       </tr>
