--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,7 @@ layout: default
 </div>
 <div class="contributed talks">
   <p>
-  </br><span class="dot-invited-talk"></span> Invited Talk,  <span class=".dot-panel-discussion"></span> Panel Discussion, <span class=".dot-lightning-talk"></span> Contributed Talks, <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
+  </br><span class="dot-invited-talk"></span> Invited Talk,  <span class="dot-panel-discussion"></span> Panel Discussion, <span class="dot-lightning-talk"></span> Contributed Talks, <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
   </p>
   <table class="table table-striped table-condensed" id="schedule">
     <thead>
