--- a/schedule.html
+++ b/schedule.html
@@ -22,24 +22,19 @@ layout: default
     </thead>
     <tbody>
       <tr>
-        <td><span class="dot-other-session"></span> 09:00 - 09:15</td>
+        <td><span class="dot-other-session"></span> 09:30 - 09:45</td>
         <td>Organizers</td>
         <td>Introduction</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 09:15 - 09:45</td>
+        <td><span class="dot-invited-talk"></span> 09:45 - 10:15</td>
         <td>TBD</td>
         <td>Invited Talk 1 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 09:45 - 10:15</td>
-        <td>TBD</td>
-        <td>Invited Talk 2 (25 min talk + 5 min QA)</td>
-      </tr>
-      <tr>
         <td><span class="dot-lightning-talk"></span> 10:15 - 10:30</td>
         <td></td>
-        <td>Selected Abstracts</td>
+        <td>Spotlight Presentations</td>
       </tr>
       <tr>
         <td><span class="dot-poster-session"></span> 10:30 - 11:00</td>
@@ -49,10 +44,15 @@ layout: default
       <tr>
         <td><span class="dot-invited-talk"></span> 11:00 - 11:30</td>
         <td>TBD</td>
+        <td>Invited Talk 2 (25 min talk + 5 min QA)</td>
+      </tr>
+      <tr>
+        <td><span class="dot-invited-talk"></span> 11:30 - 12:00</td>
+        <td>TBD</td>
         <td>Invited Talk 3 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-panel-discussion"></span> 11:30 - 12:30</td>
+        <td><span class="dot-panel-discussion"></span> 12:00 - 12:30</td>
         <td>TBD</td>
         <td>Panel Discussion</td>
       </tr>
@@ -72,29 +72,24 @@ layout: default
         <td>Invited Talk 5 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-invited-talk"></span> 14:30 - 15:00</td>
-        <td>TBD</td>
-        <td>Invited Talk 6 (25 min talk + 5 min QA)</td>
-      </tr>
-      <tr>
-        <td><span class="dot-other-session"></span> 15:00 - 15:10</td>
-        <td></td>
-        <td> Paper Awards</td>
-      </tr>
-      <tr>
-        <td><span class="dot-poster-session"></span> 15:10 - 15:40</td>
+        <td><span class="dot-poster-session"></span> 14:30 - 15:00</td>
         <td></td>
         <td>Coffee Break & Posters</td>
       </tr>
       <tr>
-        <td><span class="dot-panel-discussion"></span> 15:40 - 16:40</td>
+        <td><span class="dot-invited-talk"></span> 15:00 - 15:30</td>
         <td>TBD</td>
-        <td>Panel Discussion</td>
+        <td>Invited Talk 6 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-poster-session"></span> 16:40 - 17:00</td>
+        <td><span class="dot-other-session"></span> 15:30 - 15:40</td>
         <td></td>
-        <td>Posters</td>
+        <td> Paper Awards</td>
+      </tr>
+      <tr>
+        <td><span class="dot-panel-discussion"></span> 15:40 - 16:30</td>
+        <td>TBD</td>
+        <td>Panel Discussion</td>
       </tr>
     </tbody>
   </table>
