--- a/papers.html
+++ b/papers.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 <div class="banner">
-     <img src="images/banner.jpg" alt="Learning to Simulate Robot's World" class="banner-img">
+     <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
      <div class="banner-text">
-       <h1>Learning to Simulate Robot's World</h1>
-       <p>TBD</p>
+       <h1>Learning to Simulate Robot Worlds</h1>
+       <p>CoRL 2025 Workshop (under review)</p>
      </div>
    </div>
 <div id="program">
