Update other pages

--- a/papers.html
+++ b/papers.html
@@ -4,8 +4,14 @@ layout: default
 <div class="banner">
      <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
      <div class="banner-text">
-       <h1>Learning to Simulate Robot Worlds</h1>
-       <p>CoRL 2025 Workshop (under review)</p>
+      <h1>Learning to Simulate Robot Worlds</h1>
+      <h3>CoRL 2025 Workshop</h3>
+      <p>September 27, 2025</p>
+      <p>
+        <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
+        Seoul, South Korea
+        <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
+      </p>
      </div>
    </div>
 <div id="program">
