--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@ layout: coverpage
     <tbody>
     <tr>
       <td>Submission site opens</td>
-      <td>TBD</td>
+      <td>25.07.2025</td>
     </tr>
     <tr>
-      <td>Submission deadline (4-page submissions)</td>
-      <td>TBD</td>
+      <td>Submission deadline (4-page submissions & 1-page abstracts)</td>
+      <td>18.08.2025</td>
     </tr>
     <tr>
       <td>Decisions announced</td>
-      <td>TBD</td>
+      <td>05.09.2025</td>
     </tr>
     <tr>
       <td>Camera-ready due</td>
-      <td>TBD</td>
+      <td>10.09.2025</td>
     </tr>
     </tbody>
     </table>
