Prepared confirmed Speakers

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: coverpage
 </div>
 
 <div id="speakers" class="row">
-  <h2>Potential Speakers (TBD)</h2>
+  <h2>Speakers and Panelists (TBD)</h2>
   <div class="break"></div>
   <!-- <div class="container">
     <div class="row">
@@ -94,14 +94,26 @@ layout: coverpage
       </div>
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
-            src="images/speakers/sungjin-ahn.jpg" alt=""></center>
-        <a href="https://mlml.kaist.ac.kr/sungjinahn">
+            src="images/speakers/eric_jang.jpg" alt=""></center>
+        <a href="https://evjang.com/">
           <h4 class="section-heading">
-            <center>Sungjin Ahn</center>
+            <center>Eric Jang</center>
           </h4>
         </a>
         <h5 class="section-heading">
-          <center><i>KAIST, South Korea</i></center>
+          <center><i>1X Technologies</i></center>
+        </h5>
+      </div>
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/hao_su.jpg" alt=""></center>
+        <a href="https://cseweb.ucsd.edu/~haosu/">
+          <h4 class="section-heading">
+            <center>Hao Su</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>UC San Diego/i></center>
         </h5>
       </div>
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
@@ -118,6 +130,18 @@ layout: coverpage
       </div>
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/yilun_du.png" alt=""></center>
+        <a href="https://yilundu.github.io/">
+          <h4 class="section-heading">
+            <center>Yilun Du</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>Harvard University/i></center>
+        </h5>
+      </div>
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
             src="images/speakers/georg-martius.jpg" alt=""></center>
         <a href="TODO">
           <h4 class="section-heading">
@@ -126,6 +150,18 @@ layout: coverpage
         </a>
         <h5 class="section-heading">
           <center><i>University of Tuebingen, Germany</i></center>
+        </h5>
+      </div>
+      <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
+        <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
+            src="images/speakers/sungjin-ahn.jpg" alt=""></center>
+        <a href="https://mlml.kaist.ac.kr/sungjinahn">
+          <h4 class="section-heading">
+            <center>Sungjin Ahn</center>
+          </h4>
+        </a>
+        <h5 class="section-heading">
+          <center><i>KAIST, South Korea</i></center>
         </h5>
       </div>
     </div>
