--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: coverpage
 <div id="speakers" class="row">
   <h2>Speakers and Panelists (TBD)</h2>
   <div class="break"></div>
-  <!-- <div class="container">
+   <div class="container">
     <div class="row">
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
@@ -113,7 +113,7 @@ layout: coverpage
           </h4>
         </a>
         <h5 class="section-heading">
-          <center><i>UC San Diego/i></center>
+          <center><i>UC San Diego</i></center>
         </h5>
       </div>
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
@@ -137,9 +137,10 @@ layout: coverpage
           </h4>
         </a>
         <h5 class="section-heading">
-          <center><i>Harvard University/i></center>
+          <center><i>Harvard University</i></center>
         </h5>
       </div>
+      <!--
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
             src="images/speakers/georg-martius.jpg" alt=""></center>
@@ -164,8 +165,9 @@ layout: coverpage
           <center><i>KAIST, South Korea</i></center>
         </h5>
       </div>
+    -->
     </div>
-  </div> -->
+  </div>
 </div>
 
 <div id="organizers" class="row">
