--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@ layout: coverpage
           <center><i>University of Toronto, Nvidia</i></center>
         </h5>
       </div>
-           <!--
+           
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
-            src="images/speakers/eric_jang.jpg" alt=""></center>
-        <a href="https://evjang.com/">
+            src="images/speakers/daniel_ho.jpeg" alt=""></center>
+        <a href="https://itsdanielho.com/">
           <h4 class="section-heading">
-            <center>Eric Jang</center>
+            <center>Daniel Ho</center>
           </h4>
         </a>
         <h5 class="section-heading">
           <center><i>1X Technologies</i></center>
         </h5>
       </div>
-      -->
+      
       <div class="col-sm-2 wow fadeInRightBig" data-animation-delay="200">
         <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150"
             src="images/speakers/hao_su.jpg" alt=""></center>
