--- a/submit.html
+++ b/submit.html
@@ -32,7 +32,7 @@ layout: default
   <p><b> Submission Policy: </b></p>
   <p>
   <ul>
-    <li>Submissions are managed using OpenReview: <a href="https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW&referrer=%5BHomepage%5D(%2F)">Submission site</a></li>
+    <li>Submissions are managed using OpenReview: <a href="https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW<">Submission site</a></li>
     <li>We encourage two types of submissions: 
       <ol>
         <li><em>Novel Papers:</em> 4-page submissions presenting new perspectives or experimental results. Should contain up to 4 pages of main paper plus any number of pages for references and supplementary material</li>
@@ -55,7 +55,7 @@ layout: default
     </tr>
     <tr>
       <td>Submission site</td>
-      <td>https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW</td>
+      <td><a href="https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW<">https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW</a></td>
     </tr>
     <tr>
       <td>Submission deadline (4-page submissions & 1-page abstracts)</td>
