Added bios and submission site, added tentative schedule

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ layout: coverpage
       <a href="https://animesh.garg.tech/">
         <h4 class="section-heading">Animesh Garg</h4>
       </a>
-      <h5 class="section-heading"><i>University of Toronto, Nvidia</i></h5>
+      <h5 class="section-heading"><i>Georgia Tech</i></h5>
     </div>
 
     <div class="col-md-9">
