Exclude CoRL 2025 papers

--- a/submit.html
+++ b/submit.html
@@ -36,7 +36,7 @@ layout: default
     <li>We encourage two types of submissions: 
       <ol>
         <li><em>Novel Papers:</em> 4-page submissions presenting new perspectives or experimental results. Should contain up to 4 pages of main paper plus any number of pages for references and supplementary material</li>
-        <li><em>Abstracts from previously published work:</em> One-page abstracts of previously submitted work (e.g., from CoRL or in other related conferences). The single page should contain a summary of the paper and outline its relation to the workshop topic and a note on where the paper was presented earlier.</li>
+        <li><em>Abstracts from previously published work:</em> One-page abstracts of papers that are already published or accepted for publication at other venues. The single page should contain a summary of the paper and outline its relation to the workshop topic. Please, also provide a link to the online proceedings page showing your accepted article. Note that CoRL 2025 papers are NOT allowed for submission. </li>
       </ol>
     <li>We ask authors to use the supplementary material only for minor details that do not fit in the main paper. We reserve the right to desk reject papers that strongly violate this format (e.g., more than 4 pages of main content before references)</li>
     <li>4-page submissions should be fully anonymized for double-blind review.</li>
