Exclude CoRL 2025 papers

--- a/submit.html
+++ b/submit.html
@@ -35,8 +35,8 @@ layout: default
     <li>Submissions are managed using OpenReview: <a href="https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW">Submission site</a></li>
     <li>We encourage two types of submissions: 
       <ol>
-        <li><em>Novel Papers:</em> 4-page submissions presenting new perspectives or experimental results. Should contain up to 4 pages of main paper plus any number of pages for references and supplementary material</li>
-        <li><em>Abstracts from previously published work:</em> One-page abstracts of papers that are already published or accepted for publication at other venues. The single page should contain a summary of the paper and outline its relation to the workshop topic. Please, also provide a link to the online proceedings page showing your accepted article. Note that CoRL 2025 papers are NOT allowed for submission. </li>
+        <li><strong>Novel Papers:</strong> 4-page submissions presenting new perspectives or experimental results. Should contain up to 4 pages of main paper plus any number of pages for references and supplementary material</li>
+        <li><strong>Abstracts from previously published work:</strong> One-page abstracts summarizing work that has already been published or accepted at other venues. The abstract should highlight the main contributions and explain the relevance to the workshop topic. Please also include a link to the online proceedings page for the original publication. <strong>Note:</strong> Papers accepted to CoRL 2025 are <em>not</em> eligible for submission.</li>
       </ol>
     <li>We ask authors to use the supplementary material only for minor details that do not fit in the main paper. We reserve the right to desk reject papers that strongly violate this format (e.g., more than 4 pages of main content before references)</li>
     <li>4-page submissions should be fully anonymized for double-blind review.</li>
