Update section title from 'References' to 'Related Publications' in submit.html

--- a/submit.html
+++ b/submit.html
@@ -74,7 +74,7 @@ layout: default
   </p>
 </div>
 
-<h3 style='margin-bottom: 12pt;'>References</h3>
+<h3 style='margin-bottom: 12pt;'>Related Publications</h3>
 <div class='references' style='font-size:11pt'>
 <ul>
   <li>Patel, M., et al. "Real-to-Sim-to-Real: Bridging the Reality Gap in Robot Learning."</li>
