--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: coverpage
 ---
 
 <div class="banner">
-  <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
+  <video src="images/banner.mp4" class="banner-img" autoplay muted loop playsinline>
+    <p>Your browser doesn't support HTML5 video. Here is a <a href="images/banner.mp4">link to the video</a> instead.</p>
+  </video>
   <div class="banner-text">
-    <h1>Learning to Simulate Robot Worlds</h1>
-    <h3>CoRL 2025 Workshop</h3>
+    <h2>Learning to Simulate Robot Worlds</h2>
+    <h4>CoRL 2025 Workshop</h4>
     <p>September 27, 2025</p>
     <p>
       <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
@@ -16,7 +18,7 @@ layout: coverpage
   </div>
 </div>
 
-<div class="row">
+<div class="row main-content">
   <div class="break"></div>
   <p>
     Robotics is entering an era where high-fidelity simulation and data-driven controllable world models are converging to revolutionize learning for manipulation and navigation. Traditionally, physics-based simulators and digital twins have been the go-to approach for training and evaluating robot policies. However, constructing realistic simulations with engines like Unity or Unreal is labor-intensive and often fails to capture the full complexity of the real world.
@@ -35,7 +37,7 @@ layout: coverpage
   </p>
 </div>
 
-<div class="row">
+<div class="row main-content">
   <h2>Topics</h2>
   <div class="break"></div>
   <ul>
@@ -50,7 +52,7 @@ layout: coverpage
   </ul>
 </div>
 
-<div class="row">
+<div class="row main-content">
 <p>
   
   <h2>Important Dates and Links</h2>
@@ -149,7 +151,7 @@ layout: coverpage
   </div>
 </div>
 -->
-<div id="speakers" class="row">
+<div id="speakers" class="row main-content">
   <h2>Speakers and Panelists (TBD)</h2>
   <div class="break"></div>
   <div class="container" style="max-width: 1140px;">
@@ -269,7 +271,7 @@ layout: coverpage
     </div>
   </div>
 </div>
-<div id="organizers" class="row">
+<div id="organizers" class="row main-content">
 <h2>Organizers</h2>
 <div class="break"></div>
       <div class="container">
@@ -402,7 +404,7 @@ layout: coverpage
 
         <div class="row wow fadeInRightBig" data-animation-delay="200">
           
-          <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
+          <div class="col-sm-6 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/yunzhu-li.jpg" alt=""></center>
             <a href="https://yunzhuli.github.io">
@@ -415,7 +417,7 @@ layout: coverpage
             </h5>
           </div>
           
-          <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
+          <div class="col-sm-6 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
                 src="images/organizers/efstratiosgavves.png" alt=""></center>
             <a href="https://www.egavves.com/">
