--- a/papers.html
+++ b/papers.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 <div class="banner">
-     <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
+     <video src="images/banner.mp4" class="banner-img" autoplay muted loop playsinline>
+       <p>Your browser doesn't support HTML5 video. Here is a <a href="images/banner.mp4">link to the video</a> instead.</p>
+     </video>
      <div class="banner-text">
-      <h1>Learning to Simulate Robot Worlds</h1>
-      <h3>CoRL 2025 Workshop</h3>
+      <h2>Learning to Simulate Robot Worlds</h2>
+      <h4>CoRL 2025 Workshop</h4>
       <p>September 27, 2025</p>
       <p>
         <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
@@ -16,14 +18,14 @@ layout: default
    </div>
 <div id="program">
 
-<div class="row">
+<div class="row main-content">
   <p>Accepted papers are hosted on the <a href="XXX">Learning to Simulate Robot's World Workshop OpenReview page</a>.</p>
 <p>
      All accepted papers will be presented as posters during the poster session.</a>
 </p>
 </div>
 
-<div class="row">
+<div class="row main-content">
 <a name="session-1"></a>
 <!-- <table class="table table-striped" id="papers">
 <thead>
