--- a/submit.html
+++ b/submit.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 <div class="banner">
-  <img src="images/banner.jpg" alt="Learning to Simulate Robot Worlds" class="banner-img">
+  <video src="images/banner.mp4" class="banner-img" autoplay muted loop playsinline>
+  <p>Your browser doesn't support HTML5 video. Here is a <a href="images/banner.mp4">link to the video</a> instead.</p>
+</video>
   <div class="banner-text">
-    <h1>Learning to Simulate Robot Worlds</h1>
-    <h3>CoRL 2025 Workshop</h3>
+    <h2>Learning to Simulate Robot Worlds</h2>
+    <h4>CoRL 2025 Workshop</h4>
     <p>September 27, 2025</p>
     <p>
       <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
@@ -14,7 +16,7 @@ layout: default
     </p>
   </div>
 </div>
-<div class="row">
+<div class="row main-content">
   <p><b><mark>Call for Papers</mark></b>
     We are sourcing two different types of papers: four-page papers and one-page abstracts, focusing on learning to simulate robot worlds and their applications in robotics. Specific topics of interest include:
     <ul>
@@ -74,7 +76,10 @@ layout: default
   </p>
 </div>
 
+<div class="row main-content">
+
 <h3 style='margin-bottom: 12pt;'>Related Publications</h3>
+<div class="row main-content">
 <div class='references' style='font-size:11pt'>
 <ul>
   <li>Patel, M., et al. "Real-to-Sim-to-Real: Bridging the Reality Gap in Robot Learning."</li>
@@ -92,4 +97,5 @@ layout: default
   <li>Kerr, J., et al. "Robot Learning with Articulated Objects."</li>
   <li>Li, Y., et al. "Evaluating Robot Policies with Learned World Models."</li>
 </ul>
+</div>
 </div>
