--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ layout: coverpage
         <div class="row wow fadeInRightBig" data-animation-delay="200">
           <div class="col-sm-4 wow fadeInRightBig" data-animation-delay="200">
             <center><img class="img-responsive img-rounded" style="border-radius: 50%" height="100" width="100"
-                src="images/organizers/andriizadaianchuk.png" alt=""></center>
+                src="images/organizers/andriizadaianchuk2.jpg" alt=""></center>
             <a href="https://zadaianchuk.github.io/">
               <h4 class="section-heading">
                 <center>Andrii Zadaianchuk</center>
